# deadcode

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cli.js  conftest.py  package.json  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml  test.yml
src/deadcode/: __init__.py  __main__.py  cli.py  config.py  scanner.py
tests/: test_config_and_fixes.py  test_scanner.py
